--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@types/jest": "24.0.25",
+    "@types/node": "^16.9.2",
     "@typescript-eslint/eslint-plugin": "4.28.4",
     "@typescript-eslint/parser": "4.28.4",
     "@vue/cli-plugin-babel": "4.5.13",
@@ -35,7 +36,9 @@
     "eslint-plugin-vue": "6.2.2",
     "sass": "1.36.0",
     "sass-loader": "8.0.2",
-    "svg-sprite-loader": "6.0.9",
+    "svg-sprite-loader": "^4.1.6",
+    "svg-sprite-loader-mod": "^4.1.6-mod1",
+    "svgo-loader": "^2.2.1",
     "typescript": "4.1.6",
     "vue-template-compiler": "2.6.14"
   }
