--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@vue/test-utils": "1.2.2",
     "eslint": "6.8.0",
     "eslint-plugin-vue": "6.2.2",
+    "postcss": "^8.3.7",
+    "postcss-100vh-fix": "^1.0.2",
     "sass": "1.36.0",
     "sass-loader": "8.0.2",
     "svg-sprite-loader": "^4.1.6",
