--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "vue-class-component": "7.2.6",
     "vue-property-decorator": "9.1.2",
     "vue-router": "3.5.2",
-    "vuex": "3.1.2"
+    "vuex": "3.1.2",
+    "echarts":"^4.8.0"
   },
   "devDependencies": {
+    "@types/echarts": "^4.6.3",
     "@types/jest": "24.0.25",
     "@types/node": "^16.9.2",
     "@typescript-eslint/eslint-plugin": "4.28.4",
