--- a/package.json
+++ b/package.json
@@ -11,19 +11,21 @@
   "dependencies": {
     "core-js": "3.15.2",
     "dayjs": "^1.10.7",
+    "echarts": "^4.8.0",
+    "element-ui": "^2.15.6",
+    "layui-laydate": "^5.3.1",
+    "lodash": "^4.17.19",
     "register-service-worker": "1.7.2",
     "vue": "2.6.14",
     "vue-class-component": "7.2.6",
     "vue-property-decorator": "9.1.2",
     "vue-router": "3.5.2",
-    "vuex": "3.1.2",
-    "echarts":"^4.8.0",
-    "lodash":"^4.17.19"
+    "vuex": "3.1.2"
   },
   "devDependencies": {
     "@types/echarts": "^4.6.3",
-    "@types/lodash": "^4.14.157",
     "@types/jest": "24.0.25",
+    "@types/lodash": "^4.14.157",
     "@types/node": "^16.9.2",
     "@typescript-eslint/eslint-plugin": "4.28.4",
     "@typescript-eslint/parser": "4.28.4",
@@ -37,6 +39,7 @@
     "@vue/cli-service": "4.5.13",
     "@vue/eslint-config-typescript": "7.0.0",
     "@vue/test-utils": "1.2.2",
+    "babel-plugin-component": "^1.1.1",
     "eslint": "6.8.0",
     "eslint-plugin-vue": "6.2.2",
     "postcss": "^8.3.7",
